dist/docs/3.0.0-beta.3/creative/brand-manifest.mdx
---
title: Brand Manifest
description: Standardized brand information manifest for creative generation and media buying
keywords: [brand manifest, brand manifest, creative generation, brand guidelines]
---


The **Brand Manifest** is a standardized format for identifying the advertiser and providing brand context in AdCP. It tells publishers **who the advertiser is** (for policy compliance and business purposes) and optionally provides brand guidelines, assets, and product catalogs for creative generation.

Brand manifests can be provided either **inline as a JSON object** or **by URL reference** to a hosted manifest file.

## Overview

Brand manifests solve a key problem: how to efficiently identify advertisers and provide brand context without requiring complex authorization flows or repeated data entry. The brand manifest provides:

- **Advertiser identity**: Publishers know who they're doing business with (KYC/policy compliance)
- **Brand guidelines**: Colors, fonts, tone, and visual identity for creative generation
- **Asset libraries**: Logos, images, and videos for creative assembly
- **Product catalogs**: SKUs and offerings for promotional targeting
- **Consistent identity**: Same brand information reused across all requests

### Key Benefits

- **Know Your Customer**: Publishers can verify advertisers meet their standards
- **Privacy Transparency**: Link to privacy policy for consumer consent flows
- **Minimal Friction**: Start with just a name or URL, expand as needed
- **Cacheable**: Same brand manifest reused across all requests
- **Standardized**: Consistent format across all AdCP implementations
- **Flexible**: Supports SMB to enterprise use cases
- **AI-Optimized**: Structured for easy ingestion by creative agents

## Providing Brand Manifests

### Inline JSON Object

Provide the brand manifest directly in the request:

```json
{
  "brand_manifest": {
    "url": "https://bobsfunburgers.com",
    "name": "Bob's Fun Burgers",
    "colors": {
      "primary": "#FF6B35"
    }
  }
}
```

### URL String

Reference a hosted brand manifest file with a URL string:

```json
{
  "brand_manifest": "https://cdn.acmecorp.com/brand-manifest.json"
}
```

The manifest at the URL must conform to the brand-manifest.json schema.

**Benefits of URL references:**
- **Centralized management**: Update brand information in one place
- **Version control**: Track changes to brand guidelines over time
- **Reduced payload size**: Large manifests don't bloat every request
- **CDN caching**: Leverage edge caching for faster access
- **Consistency**: Same manifest across all campaigns and platforms

## Use Cases

### Minimal Manifest (Sales Agents / Media Buying Only)

**If you're building a sales agent focused purely on media buying**, you can provide a minimal manifest. The brand manifest is required so publishers know who the advertiser is (for policy compliance and business purposes), but you don't need extensive brand details unless you're using creative generation or optimization features.

**Minimal inline manifest:**
```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "name": "ACME Corporation",
  "url": "https://acmecorp.com"
}
```

**Or even simpler for brands with URLs:**
```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "name": "ACME Corporation",
  "url": "https://acmecorp.com"
}
```

**Or reference a minimal hosted manifest:**
```json
"https://acmecorp.com/.well-known/brand-manifest.json"
```

This minimal approach provides:
- Advertiser identity for publisher KYC and policy compliance
- Basic business information for reporting and tracking
- Future extensibility if you later need creative generation

You can safely skip colors, fonts, logos, product catalogs, and tone unless your use case requires them.

### SMB / Ad Hoc Creative Generation

For small businesses or one-off campaigns needing creative generation, a minimal brand manifest with a URL provides enough context:

```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "name": "Bob's Fun Burgers",
  "url": "https://bobsfunburgers.com"
}
```

Creative agents can infer brand information from the URL, pulling logos, colors, and style from the website.

### Enterprise / Established Brand

For established brands with defined guidelines, host the manifest on a CDN:

**Hosted at `https://cdn.acmecorp.com/brand-manifest.json`:**
```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "url": "https://acmecorp.com",
  "name": "ACME Corporation",
  "logos": [
    {
      "url": "https://cdn.acmecorp.com/logo-on-light.png",
      "orientation": "horizontal",
      "background": "light-bg",
      "variant": "primary",
      "usage": "Primary logo for use on light backgrounds",
      "width": 1200,
      "height": 400
    },
    {
      "url": "https://cdn.acmecorp.com/logo-on-dark.png",
      "orientation": "horizontal",
      "background": "dark-bg",
      "variant": "primary",
      "usage": "Primary logo for use on dark backgrounds",
      "width": 1200,
      "height": 400
    },
    {
      "url": "https://cdn.acmecorp.com/icon.png",
      "orientation": "square",
      "background": "transparent-bg",
      "variant": "icon",
      "usage": "Icon-only variant for small formats",
      "width": 512,
      "height": 512
    }
  ],
  "colors": {
    "primary": "#FF6B35",
    "secondary": "#004E89",
    "accent": "#F7931E",
    "background": "#FFFFFF",
    "text": "#1A1A1A"
  },
  "fonts": {
    "primary": "Helvetica Neue",
    "secondary": "Georgia"
  },
  "tone": {
    "voice": "professional and trustworthy",
    "attributes": ["confident", "innovative", "approachable"],
    "dos": [
      "Use clear, direct language",
      "Highlight innovation and reliability",
      "Address decision-makers directly"
    ],
    "donts": [
      "Avoid hyperbole or exaggeration",
      "Don't use overly casual language",
      "Don't make unsubstantiated claims"
    ]
  },
  "tagline": "Innovation You Can Trust",
  "product_catalog": {
    "feed_url": "https://acmecorp.com/products.rss",
    "feed_format": "google_merchant_center"
  },
  "industry": "technology",
  "target_audience": "business decision-makers aged 35-55"
}
```

**Reference in requests:**
```json
{
  "brand_manifest": "https://cdn.acmecorp.com/brand-manifest.json"
}
```

### Multi-SKU Retailer

Large retailers can provide product feeds and asset libraries:

```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "url": "https://bigretail.com",
  "name": "BigRetail",
  "product_catalog": {
    "feed_url": "https://bigretail.com/catalog.xml",
    "feed_format": "google_merchant_center"
  },
  "disclaimers": [
    {
      "text": "Prices and availability subject to change",
      "context": "pricing",
      "required": true
    }
  ]
}
```

### Brands Without URLs

Some brands don't have dedicated URLs (white-label products, local businesses, B2B brands). Brand cards support name-only identification:

```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "name": "Great Value",
  "colors": {
    "primary": "#0071CE",
    "secondary": "#FFC220"
  },
  "tone": { "voice": "affordable and trustworthy" }
}
```

**Common cases for name-only brands:**
- White-label/store brands (e.g., "Great Value", "Kirkland")
- Local businesses without websites
- B2B brands without public sites
- Sub-brands under parent company URLs

## Brand Manifest Schemas

### Brand Manifest Reference (Union Type)

**Schema URL**: [/schemas/v2/core/brand-manifest-ref.json](https://adcontextprotocol.org/schemas/v2/core/brand-manifest-ref.json)

The brand manifest reference is a union type that accepts either:
1. **Inline object**: Full brand manifest JSON object
2. **URL reference**: Object with `manifest_url` field pointing to hosted manifest

### Brand Manifest Object

**Schema URL**: [/schemas/v2/core/brand-manifest.json](https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json)

The structure of the brand manifest object itself (whether provided inline or hosted at a URL).

### Required Fields

**Either `url` OR `name` is required** (both can be provided):

| Field | Type | Description |
|-------|------|-------------|
| `url` | string (uri) | Primary brand URL for context and asset discovery |
| `name` | string | Brand or business name (required if no URL provided) |

### Optional Fields

| Field | Type | Description |
|-------|------|-------------|
| `name` | string | Brand or business name |
| `privacy_policy_url` | string (uri) | URL to the brand's privacy policy for consumer consent flows |
| `logos` | Logo[] | Brand logo assets with semantic tags |
| `colors` | Colors | Brand color palette (hex format) |
| `fonts` | Fonts | Brand typography guidelines |
| `tone` | ToneObject | Brand voice and messaging tone guidelines |
| `tagline` | string | Brand tagline or slogan |
| `assets` | Asset[] | Brand asset library with explicit assets and tags |
| `product_catalog` | ProductCatalog | Product catalog information for e-commerce advertisers |
| `disclaimers` | Disclaimer[] | Legal disclaimers for creatives |
| `industry` | string | Industry or vertical |
| `target_audience` | string | Primary target audience description |
| `contact` | Contact | Brand contact information |
| `metadata` | Metadata | Version and update tracking |

### Logo Object

```typescript
{
  url: string;                    // URL to logo asset
  orientation?: Orientation;      // Aspect ratio: square, horizontal, vertical, stacked
  background?: Background;        // Compatibility: dark-bg, light-bg, transparent-bg
  variant?: Variant;              // Type: primary, secondary, icon, wordmark, full-lockup
  tags?: string[];                // Additional custom tags
  usage?: string;                 // Human-readable description
  width?: number;                 // Logo width in pixels
  height?: number;                // Logo height in pixels
}
```

#### Logo Fields

**`orientation`** (enum) - Logo aspect ratio:
| Value | Description |
|-------|-------------|
| `square` | Square or circular lockup (~1:1 aspect ratio) |
| `horizontal` | Wide horizontal layout |
| `vertical` | Tall vertical layout |
| `stacked` | Vertically stacked elements |

**`background`** (enum) - Background compatibility:
| Value | Description |
|-------|-------------|
| `dark-bg` | Use on dark backgrounds (logo is light-colored) |
| `light-bg` | Use on light backgrounds (logo is dark-colored) |
| `transparent-bg` | Has transparent background, works on any color |

**`variant`** (enum) - Logo variant type:
| Value | Description |
|-------|-------------|
| `primary` | Main brand logo |
| `secondary` | Alternative version |
| `icon` | Icon/symbol only |
| `wordmark` | Text/wordmark only |
| `full-lockup` | Complete logo with all elements |

**`tags`** (string array) - Additional custom tags for categorization beyond the standard fields.

#### Logo Example

```json
{
  "logos": [
    {
      "url": "https://cdn.brand.com/logo-on-light.png",
      "orientation": "horizontal",
      "background": "light-bg",
      "variant": "primary",
      "usage": "Primary logo for use on light backgrounds",
      "width": 1200,
      "height": 400
    },
    {
      "url": "https://cdn.brand.com/logo-on-dark.png",
      "orientation": "horizontal",
      "background": "dark-bg",
      "variant": "primary",
      "usage": "Primary logo for use on dark backgrounds",
      "width": 1200,
      "height": 400
    },
    {
      "url": "https://cdn.brand.com/icon.png",
      "orientation": "square",
      "background": "transparent-bg",
      "variant": "icon",
      "usage": "Icon-only variant for small formats",
      "width": 512,
      "height": 512
    }
  ]
}
```

### Tone Object

The `tone` field provides structured voice guidelines for creative agents.

```typescript
{
  voice?: string;        // High-level voice descriptor (the what)
  attributes?: string[]; // Personality traits (the character)
  dos?: string[];        // Specific guidance for copy generation (the how)
  donts?: string[];      // Guardrails to avoid brand violations (the boundaries)
}
```

#### Tone Fields

| Field | Type | Description |
|-------|------|-------------|
| `voice` | string | High-level voice descriptor (e.g., "warm and inviting") |
| `attributes` | string[] | Personality traits that characterize the brand |
| `dos` | string[] | Specific guidance for copy generation |
| `donts` | string[] | Guardrails to avoid brand violations |

#### Tone Example

**Minimal tone** (just voice):
```json
{
  "tone": {
    "voice": "professional and trustworthy"
  }
}
```

**Full tone with guidance**:
```json
{
  "tone": {
    "voice": "warm and inviting",
    "attributes": ["friendly", "optimistic", "conversational", "authentic"],
    "dos": [
      "Use simple, everyday language",
      "Address the reader directly",
      "Show empathy and understanding",
      "Keep sentences short and punchy"
    ],
    "donts": [
      "Avoid corporate jargon",
      "Don't be overly formal or stiff",
      "Avoid technical terms unless necessary",
      "Don't make exaggerated claims"
    ]
  }
}
```

The structured tone format enables creative agents to:
- Generate brand-compliant copy by following specific dos/donts
- Apply consistent voice across different creative formats
- Automate brand guideline compliance without human review

### Colors Object

```typescript
{
  primary?: string;      // Primary brand color (#RRGGBB)
  secondary?: string;    // Secondary brand color (#RRGGBB)
  accent?: string;       // Accent color (#RRGGBB)
  background?: string;   // Background color (#RRGGBB)
  text?: string;         // Text color (#RRGGBB)
}
```

### Fonts Object

```typescript
{
  primary?: string;      // Primary font family name
  secondary?: string;    // Secondary font family name
  font_urls?: string[];  // URLs to web font files
}
```

### Disclaimer Object

```typescript
{
  text: string;          // Disclaimer text
  context?: string;      // When this applies (e.g., "financial_products", "health_claims")
  required?: boolean;    // Whether this must appear (default: true)
}
```

### Asset Object

```typescript
{
  asset_id: string;                  // Unique identifier for this asset
  asset_type: string;                // Type of asset (image, video, audio, text, etc.)
  url: string;                       // URL to CDN-hosted asset file
  tags?: string[];                   // Tags for asset discovery (e.g., "holiday", "lifestyle")
  name?: string;                     // Human-readable asset name
  description?: string;              // Asset description or usage notes
  width?: number;                    // Image/video width in pixels
  height?: number;                   // Image/video height in pixels
  duration_seconds?: number;         // Video/audio duration in seconds
  file_size_bytes?: number;          // File size in bytes
  format?: string;                   // File format (e.g., "jpg", "mp4")
  metadata?: Record<string, any>;    // Additional asset-specific metadata
}
```

### ProductCatalog Object

```typescript
{
  feed_url: string;                  // URL to product catalog feed
  feed_format?: string;              // Format: "google_merchant_center" | "facebook_catalog" | "openai_product_feed" | "custom"
  categories?: string[];             // Product categories available in the catalog
  last_updated?: string;             // When the product catalog was last updated (ISO 8601)
  update_frequency?: string;         // How frequently the catalog is updated
  agentic_checkout?: AgenticCheckout; // Optional checkout endpoint configuration
}
```

### AgenticCheckout Object

```typescript
{
  endpoint: string;                  // Base URL for checkout session API
  spec: string;                      // Checkout API specification (e.g., "openai_agentic_checkout_v1")
  supported_payment_providers?: string[]; // Payment providers (e.g., ["stripe", "adyen"])
}
```

## Integration with AdCP Tasks

### create_media_buy

Include brand manifest in media buy creation to provide context for creative generation:

```json
{
  "buyer_ref": "campaign_2024_q1",
  "promoted_offering": "ACME Pro Widget",
  "brand_manifest": {
    "url": "https://acmecorp.com",
    "name": "ACME Corporation",
    "tone": { "voice": "professional and innovative" }
  },
  "packages": [...],
  "budget": {...}
}
```

### build_creative

Use brand manifest to inform creative generation:

```json
{
  "message": "Create a native ad highlighting our new product launch",
  "format_id": {
    "agent_url": "https://creative.adcontextprotocol.org",
    "id": "display_native"
  },
  "brand_manifest": {
    "url": "https://acmecorp.com",
    "logos": [
      {
        "url": "https://cdn.acmecorp.com/logo-square.png",
        "orientation": "square",
        "background": "transparent-bg",
        "variant": "primary",
        "usage": "Primary square logo"
      }
    ],
    "colors": {
      "primary": "#FF6B35",
      "secondary": "#004E89"
    },
    "tone": {
      "voice": "professional and trustworthy",
      "dos": ["Highlight innovation", "Use clear language"],
      "donts": ["Avoid hyperbole"]
    }
  }
}
```

## Best Practices

### 1. Start Simple, Expand as Needed

Begin with just a URL. Add more fields only when the URL-based inference isn't sufficient:

```json
// ✅ Good starting point
{
  "url": "https://mybrand.com"
}

// ✅ Add details when needed
{
  "url": "https://mybrand.com",
  "logos": [...],
  "colors": {...}
}
```

### 2. Use Structured Fields for Logos

Use the `orientation`, `background`, and `variant` enum fields for reliable filtering by creative agents:

```json
{
  "logos": [
    {
      "url": "...",
      "orientation": "horizontal",
      "background": "light-bg",
      "variant": "primary",
      "usage": "Primary logo for light backgrounds"
    },
    {
      "url": "...",
      "orientation": "horizontal",
      "background": "dark-bg",
      "variant": "primary",
      "usage": "Primary logo for dark backgrounds"
    },
    {
      "url": "...",
      "orientation": "square",
      "background": "transparent-bg",
      "variant": "icon",
      "usage": "Icon for small placements"
    }
  ]
}
```

**Enum fields for filtering:**
- `orientation`: `square`, `horizontal`, `vertical`, `stacked`
- `background`: `dark-bg`, `light-bg`, `transparent-bg`
- `variant`: `primary`, `secondary`, `icon`, `wordmark`, `full-lockup`

Use the `tags` array for additional custom categorization.

### 3. Cache and Reuse Brand Manifests

Brand cards are designed to be cached. Use URL strings for automatic caching:

```javascript
// Reference hosted manifest (cacheable by URL)
const brandManifestUrl = "https://cdn.acmecorp.com/brand-manifest.json";

// Reuse across requests - agents can cache the manifest
await createMediaBuy({ brand_manifest: brandManifestUrl, ... });
await buildCreative({ brand_manifest: brandManifestUrl, ... });
await buildCreative({ brand_manifest: brandManifestUrl, ... }); // Same manifest, different creative
```

Or cache inline manifests yourself:

```javascript
// Cache inline manifest once
const brandManifest = {
  url: "https://acmecorp.com",
  colors: {...},
  logos: [...]
};

// Reuse across requests
await createMediaBuy({ brand_manifest: brandManifest, ... });
await buildCreative({ brand_manifest: brandManifest, ... });
```

### 4. Product Feeds for Multi-SKU

Large retailers should provide product feeds:

```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "name": "Retailer Name",
  "url": "https://retailer.com",
  "product_catalog": {
    "feed_url": "https://retailer.com/products.json"
  }
}
```

**Supported Feed Formats**: Google Merchant Center, Facebook Catalog, [OpenAI Product Feed](https://developers.openai.com/commerce/specs/feed), Custom

### 5. Asset Libraries for Enterprise

Enterprise brands with large asset libraries should provide explicit assets:

```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "name": "Enterprise Brand",
  "url": "https://brand.com",
  "assets": [
    {
      "asset_id": "hero_lifestyle_1",
      "asset_type": "image",
      "url": "https://cdn.brand.com/hero-lifestyle-1.jpg",
      "tags": ["lifestyle", "hero", "outdoor"],
      "width": 1920,
      "height": 1080
    },
    {
      "asset_id": "product_video_30s",
      "asset_type": "video",
      "url": "https://cdn.brand.com/product-video-30s.mp4",
      "tags": ["product", "demo", "30s"],
      "duration_seconds": 30,
      "width": 1920,
      "height": 1080
    }
  ]
}
```

## Privacy Integration

Brand manifests support privacy transparency through the `privacy_policy_url` field. This enables AI platforms to present explicit privacy choices to users before sharing personal data with advertisers.

### Consumer Consent Flow

When an AI assistant helps a user engage with an advertiser (booking a flight, making a purchase, etc.), the platform can use the brand manifest's privacy policy URL to:

1. **Present explicit consent**: "May I share your details with Delta? [View their privacy policy]"
2. **Enable informed decisions**: Users can review data practices before data handoff
3. **Support machine-readable terms**: Works alongside [MyTerms/IEEE P7012](https://myterms.info) for automated privacy negotiation

### Example with Privacy Policy

```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "name": "Delta Airlines",
  "url": "https://delta.com",
  "privacy_policy_url": "https://delta.com/privacy"
}
```

### MyTerms Discovery

For advertisers implementing [IEEE P7012 (MyTerms)](https://myterms.info), AI platforms can discover machine-readable privacy terms from the advertiser's domain (e.g., `/.well-known/myterms`). The brand manifest's `privacy_policy_url` serves as the human-readable fallback and explicit consent path.

## Agentic Commerce Integration

Brand manifests support integration with AI commerce platforms through the `product_catalog` field. This enables AI agents to discover products and complete purchases on behalf of users.

### OpenAI Commerce

For merchants implementing [OpenAI's Commerce specifications](https://developers.openai.com/commerce), the brand manifest provides a bridge:

```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "name": "Shop Example",
  "url": "https://shopexample.com",
  "privacy_policy_url": "https://shopexample.com/privacy",
  "product_catalog": {
    "feed_url": "https://shopexample.com/products.jsonl.gz",
    "feed_format": "openai_product_feed",
    "update_frequency": "daily",
    "agentic_checkout": {
      "endpoint": "https://api.shopexample.com/checkout_sessions",
      "spec": "openai_agentic_checkout_v1",
      "supported_payment_providers": ["stripe", "adyen"]
    }
  }
}
```

**Key fields for OpenAI Commerce:**

| Field | Description |
|-------|-------------|
| `feed_format: "openai_product_feed"` | Indicates the feed conforms to [OpenAI's Product Feed spec](https://developers.openai.com/commerce/specs/feed) |
| `agentic_checkout.endpoint` | Base URL for [OpenAI's Agentic Checkout API](https://developers.openai.com/commerce/specs/checkout) |
| `agentic_checkout.spec` | Version identifier for the checkout spec |

### Feed Format Mapping

If you have an existing Google Merchant Center feed, here's how key fields map to OpenAI's spec:

| OpenAI Field | Google Merchant Center | Notes |
|--------------|----------------------|-------|
| `item_id` | `id` | Direct mapping |
| `title` | `title` | Direct mapping |
| `description` | `description` | Direct mapping |
| `url` | `link` | Direct mapping |
| `brand` | `brand` | Direct mapping |
| `price` | `price` | OpenAI uses number + currency code |
| `availability` | `availability` | Same enum values |
| `image_url` | `image_link` | Direct mapping |
| `is_eligible_search` | N/A | OpenAI-specific flag |
| `is_eligible_checkout` | N/A | OpenAI-specific flag |

## Evolution and Versioning

Brand cards are versioned using the `metadata.version` field:

```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v2/core/brand-manifest.json",
  "name": "Brand Name",
  "url": "https://brand.com",
  "metadata": {
    "version": "2.1",
    "updated_date": "2024-03-15T10:00:00Z"
  }
}
```

Version updates:
- **Patch** (2.0.1): Fix typos, update contact info
- **Minor** (2.1.0): Add new assets, update colors
- **Major** (3.0.0): Complete rebrand, new identity

## Migration from brand_guidelines

For implementations using the legacy `brand_guidelines` field in `build_creative`:

**Before (Legacy)**:
```json
{
  "brand_guidelines": {
    "colors": ["#FF6B35", "#004E89"],
    "fonts": ["Helvetica Neue"],
    "tone": "professional"
  }
}
```

**After (Brand Manifest)**:
```json
{
  "brand_manifest": {
    "url": "https://brand.com",
    "colors": {
      "primary": "#FF6B35",
      "secondary": "#004E89"
    },
    "fonts": {
      "primary": "Helvetica Neue"
    },
    "tone": { "voice": "professional" }
  }
}
```

## Brand Discovery

For discoverable brand identity, brands can host their manifest via a `brand.json` file at a well-known location:

```
https://yourdomain.com/.well-known/brand.json
```

The `brand.json` file provides:
- **Brand discovery**: Agents can find official brand information for any domain
- **Agent authorization**: Designate an official brand agent that speaks for the brand
- **Enterprise auth**: Control access to brand resources via OAuth or API keys

### Example brand.json

A brand with an agent that provides brand manifests via MCP:

```json
{
  "$schema": "https://adcontextprotocol.org/schemas/v1/brand.json",
  "version": "1.0",
  "brand_agent": {
    "url": "https://agent.acmecorp.com/mcp",
    "id": "acmecorp_brand_agent"
  }
}
```

See [Brand Protocol](/dist/docs/3.0.0-beta.3/brand-protocol/index) for the complete brand.json specification.

## Related Documentation

- **[Brand Protocol](/dist/docs/3.0.0-beta.3/brand-protocol/index)** - Brand discovery via brand.json
- **[create_media_buy](/dist/docs/3.0.0-beta.3/media-buy/task-reference/create_media_buy)** - Media buy creation with brand context
- **[build_creative](/dist/docs/3.0.0-beta.3/creative/task-reference/build_creative)** - AI-powered creative generation
- **[Creative Lifecycle](/dist/docs/3.0.0-beta.3/media-buy/creatives/)** - Managing creative assets
